5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1662_1393.log
== TEST (2019-04-15 14:07:40) 
-- CODE:
p1 = float(input("peso da encomenda:"))

if (p1! <= 4999.9):
	vf = 0.05 * p1
else:
	vf = (0.04 * p1) + 60
print(round(vf , 2))

-- ERROR:
File "XXXX", line 3
    if (p1! <= 4999.9):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:08:00) 
-- CODE:
p1 = float(input("peso da encomenda:"))

if (p1!=< 4999.9):
	vf = 0.05 * p1
else:
	vf = (0.04 * p1) + 60
print(round(vf , 2))

-- ERROR:
File "XXXX", line 3
    if (p1!=< 4999.9):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:08:15) 
-- CODE:
p1 = float(input("peso da encomenda:"))

if (p1 <= 4999.9):
	vf = 0.05 * p1
else:
	vf = (0.04 * p1) + 60
print(round(vf , 2))

-- OUTPUT:
61.61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:08:31) 
-- CODE:
p1 = float(input("peso da encomenda:"))

if (p1 <= 4999.9):
	vf = 0.05 * p1
else:
	vf = (0.04 * p1) + 60
print(round(vf , 2))

-- EXECUTION TIME:
0.21434
-- TEST CASE 1:
---- input:
1232.2
---- correct output:
61.61
---- user output:
61.61
-- TEST CASE 2:
---- input:
5055.98
---- correct output:
262.24
---- user output:
262.24
-- TEST CASE 3:
---- input:
200
---- correct output:
10.0
---- user output:
10.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
